# attzoo

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  quality.yml
docs/: index.md  reference.md
src/attentions/: __init__.py  block.py  group.py  local.py  mhsa.py  vanilla.py
src/attzoo/: __init__.py  alibi.py  base.py  block.py  combined.py  dilation.py  gated.py  group.py  linear.py  local.py  longformer.py  lsh.py  masks.py  mhsa.py  utils.py  vanilla.py
tests/: test_alibi.py  test_block.py  test_dilation.py  test_exports.py  test_group.py  test_linear.py  test_local.py  test_longformer.py  test_lsh.py  test_masks.py  test_mhsa.py  test_vanilla.py
